--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     </head>
     <body>
         <header class="header">
+            <div class="logo-box">
+                <img src="img/logo-white.png" alt="Logo" class="logo">
+            </div>
 
+            <div class="text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary-main">Shaperizing</span>
+                    <span class="heading-primary-sub">History of shapes</span>
+                </h1>
+            </div>
         </header>
-        
-        
     </body>
 </html>
